--- a/src/css/shiki.css
+++ b/src/css/shiki.css
@@ -11,7 +11,7 @@
   :is(pre *):is(.shiki *):not(.not-fumadocs-codeblock *) {
     .line& {
       position: relative;
-      min-height: 1lh;
+      min-height: 20px;
       padding-left: var(--padding-left);
       padding-right: var(--padding-right);
     }
@@ -39,7 +39,7 @@
       content: counter(line);
       color: color-mix(
         in oklab,
-        var(--fd-counter-color, var(--color-fd-muted-foreground)) 60%,
+        var(--counter-color, var(--color-oatmeal-700)) 60%,
         transparent
       );
       left: 1rem;
@@ -53,33 +53,33 @@
 
     .diff.remove& {
       opacity: 0.7;
-      --fd-counter-color: var(--color-fd-diff-remove-symbol);
-      background-color: var(--color-fd-diff-remove);
+      --counter-color: var(--color-red-700);
+      background-color: oklch(from var(--color-red-700) l c h / 0.1);
     }
 
     .diff.remove&::before {
       content: '-';
-      color: var(--color-fd-diff-remove-symbol);
+      color: var(--color-red-700);
     }
 
     .diff.add& {
-      --fd-counter-color: var(--color-fd-diff-add-symbol);
-      background-color: var(--color-fd-diff-add);
+      --counter-color: var(--color-green-600);
+      background-color: oklch(from var(--color-green-700) l c h / 0.1);
     }
 
     .diff.add&::before {
       content: '+';
-      color: var(--color-fd-diff-add-symbol);
+      color: var(--color-green-600);
     }
 
     .highlighted& {
-      --fd-counter-color: var(--color-fd-primary);
+      --counter-color: var(--color-oatmeal-800);
       padding-left: calc(var(--padding-left) - 2px);
       border-left: 2px solid
-        color-mix(in srgb, var(--color-fd-primary) 50%, transparent);
+        color-mix(in srgb, var(--color-oatmeal-800) 50%, transparent);
       background-color: color-mix(
         in srgb,
-        var(--color-fd-primary) 10%,
+        var(--color-oatmeal-800) 10%,
         transparent
       );
     }
@@ -87,10 +87,10 @@
     .highlighted-word& {
       padding: 1px;
       border: 1px solid
-        color-mix(in srgb, var(--color-fd-primary) 30%, transparent);
+        color-mix(in srgb, var(--color-oatmeal-800) 30%, transparent);
       background-color: color-mix(
         in srgb,
-        var(--color-fd-primary) 10%,
+        var(--color-oatmeal-800) 10%,
         transparent
       );
       margin: -1px;
