--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -26,9 +26,9 @@
   --color-blueberry-900: oklch(0.18 0.06 263);
   --color-blueberry-950: oklch(0.13 0.03 264);
 
-  --color-text: var(--oatmeal-900);
+  --color-text: var(--color-oatmeal-900);
   --color-muted: var(--color-oatmeal-700);
-  --color-headline: var(--oatmeal-900);
+  --color-headline: var(--color-oatmeal-900);
   --typescale: 1.333; /* Perfect Fourth */
 
   --spacing-content: min(100% - 2rem, var(--container-5xl));
