--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,7 +2,7 @@
 @plugin 'tailwind-scrollbar';
 
 @import './theme.css';
-@import './utilities.css';
+@import './utils.css';
 
 @import './prose.css';
 @import './panel.css';
@@ -10,6 +10,11 @@
 /* For <CodeBlock> customization. */
 @import './shiki.css';
 @source '../../node_modules/fumadocs-ui/dist/components/codeblock.js';
+
+::selection,
+::-moz-selection {
+  background-color: oklch(0.9 0.1 90 / 0.5);
+}
 
 @media (prefers-reduced-motion: reduce) {
   *,
